@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
-# 22-Aug-2013
-#   Set :config_files to an empty array by default
+# 23-Aug-2013
+#   Test for files in merge and ignore if not there
 
 module Jeckyl
-  # version set to 0.3.3
-  Version = '0.3.3'
-  # date set to 22-Aug-2013
-  Version_Date = '22-Aug-2013'
-  #ident string set to: jeckyl-0.3.3 22-Aug-2013
-  Ident = 'jeckyl-0.3.3 22-Aug-2013'
+  # version set to 0.3.4
+  Version = '0.3.4'
+  # date set to 23-Aug-2013
+  Version_Date = '23-Aug-2013'
+  #ident string set to: jeckyl-0.3.4 23-Aug-2013
+  Ident = 'jeckyl-0.3.4 23-Aug-2013'
 end
